# arithmetica

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  install.sh  install_macos.sh  setup.py
.github/workflows/: benchmark.yml  build.yml  tests.yml
src/: CMakeLists.txt  arithmetica.c  arithmetica.h  clear_string.h  igcd.h  ilcm.h  repeating_decimal_to_fraction.h
src/benchmark/: CMakeLists.txt  benchmark.cpp  get-unique-identifier.cpp  get_percent_improvement.hpp
src/benchmark/arithmetica_benchmarks/: add_fraction.txt  arccos.txt  arcsin.txt
src/python-module/: module.c
src/tests/: CMakeLists.txt  call_arithmetica.hpp  color.hpp  test.cpp  test2.cpp
src/tests/arithmetica_tests/add_fraction/: expected.txt  input.txt
src/tests/arithmetica_tests/algebra_term_constructor/: expected.txt  input.txt
src/tests/arithmetica_tests/algexpr::simplify/: expected.txt  input.txt
src/tests/arithmetica_tests/algexpr_simplify/: expected.txt  input.txt
src/tests/arithmetica_tests/arccos/: expected.txt  input.txt
src/tests/arithmetica_tests/arcsin/: expected.txt  input.txt
src/tests/arithmetica_tests/arctan/: expected.txt
src/tests/arithmetica_tests/construct_n_gon/: expected.txt  input.txt
src/tests/arithmetica_tests/construct_regular_polygon/: expected.txt
src/tests/arithmetica_tests/continued_fraction_to_fraction/: expected.txt  input.txt
src/tests/arithmetica_tests/cosine/: expected.txt  input.txt
src/tests/arithmetica_tests/diff/: expected.txt  input.txt
src/tests/arithmetica_tests/exponential/: expected.txt  input.txt
src/tests/arithmetica_tests/factorial/: expected.txt  input.txt
src/tests/arithmetica_tests/find_roots_of_polynomial/: expected.txt  input.txt
src/tests/arithmetica_tests/fraction_to_continued_fraction/: expected.txt  input.txt
src/tests/arithmetica_tests/function_constructor/: expected.txt  input.txt
src/tests/arithmetica_tests/igcd/: expected.txt  input.txt
src/tests/arithmetica_tests/ilcm/: expected.txt  input.txt
src/tests/arithmetica_tests/invert_matrix/: expected.txt  input.txt
src/tests/arithmetica_tests/multiply_fraction/: expected.txt  input.txt
src/tests/arithmetica_tests/natural_logarithm/: expected.txt  input.txt
src/tests/arithmetica_tests/power/: expected.txt  input.txt
src/tests/arithmetica_tests/power_fraction/: expected.txt  input.txt
src/tests/arithmetica_tests/repeating_decimal_to_fraction/: expected.txt  input.txt
src/tests/arithmetica_tests/simplify_arithmetic_expression/: expected.txt  input.txt
src/tests/arithmetica_tests/sine/: expected.txt  input.txt
src/tests/arithmetica_tests/square_root/: expected.txt  input.txt
src/tests/arithmetica_tests/tangent/: expected.txt  input.txt
src/tests/arithmetica_tests/terminating_decimal_to_fraction/: expected.txt  input.txt
src/tests/arithmetica_tests/truncate/: expected.txt  input.txt
